unpackaged/main/default/objects/Cross_Sell_Recommendations__c/Cross_Sell_Recommendations__c.object-meta.xml
<CustomObject>
    <label>Cross-Sell Recommendation</label>
    <nameField>
        <displayFormat>Recommendation-{0000}</displayFormat>
        <label>Cross-Sell Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross-SellRecommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>