unpackaged/main/default/objects/Cross_Sell_Recommendations__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>RequiredItem</fullName>
            </value>
            <value>
                <fullName>CrossSell</fullName>
            </value>
            <value>
                <fullName>UpSell</fullName>
            </value>
            <value>
                <fullName>Complementary</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>