unpackaged/main/default/objects/Cross_Sell_Recommendations__c/fields/Recommended_Product__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Recommended as Cross-Sell For</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>