unpackaged/main/default/objects/Cross_Sell_Recommendations__c/fields/Recommended_Product_Parent__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Product_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended Product Parent</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cross-Sell Products Recommendations</relationshipLabel>
    <relationshipName>ProductsRecommandation</relationshipName>
    <type>Lookup</type>
</CustomField>